# PotatoStudio

./: .gitignore  CMakeLists.txt  README.md
include/: Application.hpp  Debug.h  Window.hpp
include/Decoders/: CalibrationDecoder.hpp  Decoder.hpp  DynamicsDecoder.hpp  ParameterizedDecoder.hpp
include/Decoders/BME280/: BME280_Decoder.hpp
include/Decoders/MPU6050/: MPU6050_Decoder.hpp
include/ImGui/: Acceleration3DGraphWindow.hpp  AngularVelocity3DGraphWindow.hpp  DecodedDynamicsSamplePlotterWindow.hpp  DecoderWindow.hpp  PressureAltitudeGraphWindow.hpp  Window.hpp
installer/: installer_script.iss
libs/: Libraries.cmake
libs/glad/: cmake_install.cmake
libs/glfw/: cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/docs/: cmake_install.cmake
libs/glfw/src/: cmake_install.cmake  glfw3.pc
libs/imgui/: CMakeLists.txt  cmake_install.cmake
libs/implot/: CMakeLists.txt
libs/implot3d/: CMakeLists.txt
res/: calib_data_read.txt
src/: Application.cpp  Application.hpp  CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
src/Decoders/: CalibrationDecoder.cpp  DynamicsDecoder.cpp
src/Decoders/BME280/: BME280_Decoder.cpp
src/Decoders/MPU6050/: MPU6050_Decoder.cpp
src/ImGui/: Acceleration3DGraphWindow.cpp  AngularVelocity3DGraphWindow.cpp  DecoderWindow.cpp  PressureAltitudeGraphWindow.cpp  Window.cpp
